--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "11.8.2",
     "@emotion/styled": "11.8.1",
     "@mui/icons-material": "5.5.0",
+    "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "5.5.0",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.4",
@@ -14,9 +15,13 @@
     "@types/node": "16.11.26",
     "@types/react": "17.0.40",
     "@types/react-dom": "17.0.13",
+    "axios": "^0.26.1",
     "node-sass": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-hook-form": "^7.28.1",
+    "react-query": "^3.34.16",
     "react-router-dom": "6.2.2",
     "react-scripts": "5.0.0",
     "recoil": "0.6.1",
