--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.26",
     "@types/react": "17.0.40",
     "@types/react-dom": "17.0.13",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "axios": "^0.26.1",
+    "draft-js": "^0.11.7",
     "node-sass": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -52,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/html-to-draftjs": "^1.4.0"
   }
 }
